# python-monorepo-test

./: LICENSE  README
monorepo/: pyproject.toml
monorepo-core/: pyproject.toml
monorepo-core/monorepo_core/: __init__.py  cli.py  utils.py  workflows.py
monorepo/monorepo/: __init__.py  cli.py  workflows.py
src/monorepo/core/: __init__.py  cli.py  workflows.py
src/monorepo/monorepo/: __init__.py  utils.py  workflows.py
