[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "monorepo_core"
version = "0.0.1"
description = "The core package for monorepo."
license = "MIT"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
argparse = "*"
numpy = "*"

[tool.poetry.scripts]
monorepocore = "monorepo_core.cli:main"

[[tool.poetry.packages]]
include = "../src/monorepo/core/**/*"
