[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monorepo_core"
version = "0.0.1"
description = "The core package for monorepo."
license = {file = "../LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "argparse",
    "numpy",
]

[project.scripts]
monorepocore = "monorepo_core.cli:main"

[tool.hatch.build.targets.sdist.force-include]
"../src/monorepo/core" = "src/monorepo/core"

[tool.hatch.build.targets.wheel]
packages = ["src/monorepo"]
