[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "monorepo"
version = "0.0.1"
description = "The main package for monorepo."
license = "MIT"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
argparse = "*"
monorepo-core = { path = "../monorepo-core/" }

[tool.poetry.scripts]
monorepo = "monorepo.cli:main"

[[tool.poetry.packages]]
include = "../src/monorepo/monorepo/**/*"
