[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monorepo"
version = "0.0.1"
description = "The main package for monorepo."
license = {file = "../LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "argparse",
    "monorepo_core @ {root:uri}/../monorepo-core",
]

[project.scripts]
monorepo = "monorepo.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist.force-include]
"../src/monorepo/monorepo" = "src/monorepo/monorepo"

[tool.hatch.build.targets.wheel]
packages = ["src/monorepo"]
